--- a/_site.yml
+++ b/_site.yml
@@ -22,4 +22,6 @@ navbar:
       href: https://www.linkedin.com/in/christinelongcolumbia/
 output:
   html_document:
+    toc: true
+    toc_float: true
     css: bootstrap.css
